[gd_scene load_steps=5 format=3 uid="uid://ornpp7ksi5mj"]

[ext_resource type="Script" uid="uid://c80awu0w87o77" path="res://scenes/ui/pause_menu.gd" id="1_6tw0m"]

[sub_resource type="Animation" id="Animation_6tw0m"]
resource_name = "default"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.202165),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.764706, 1, 0), Color(1, 0.764706, 1, 0.243137)]
}

[sub_resource type="Animation" id="Animation_0lmf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.764706, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6eus"]
_data = {
&"RESET": SubResource("Animation_0lmf7"),
&"default": SubResource("Animation_6tw0m")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6tw0m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f6eus")
}
autoplay = "default"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.764706, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Vampaire Surviors"

[node name="ResumeButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="OptionButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Option"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BackToMain"
